--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -122,7 +122,7 @@ input[type=submit], button {
 
 /* Create two equal columns that floats next to each other */
 .column_right {
-    float: left;
+    float: right;
     width: 50%;
     height: 100%; /* Should be removed. Only for demonstration */
     display: flex;
@@ -225,7 +225,31 @@ input[type=submit], button {
     padding: 2.5% 10%;
   }
 
+.title_bar {
+  text-align: center;
+  height: 10%;
+}
 
+.center {
+  display: flex;
+  justify-content: center;
+}
+
+.left {
+  float: left;
+  width: 100%;
+  height: 100%; /* Should be removed. Only for demonstration */
+  display: flex;
+  left: 0;
+}
+
+.right {
+  float: right;
+  width: 100%;
+  height: 100%; /* Should be removed. Only for demonstration */
+  display: flex;
+  right: 0;
+}
 /* CSS HEX 
 --baby-powder: #fffffaff;
 --pacific-blue: #2ab7caff;
