Finished page refactoring

--- a/src/main/resources/templates/fantasy.html
+++ b/src/main/resources/templates/fantasy.html
@@ -19,13 +19,13 @@
 <body>
     <!-- Navigation Bar-->
     <div class="topnav">
-        <a href="../index.html" float="left"><img src="https://www-league.nhlstatic.com/images/logos/league-dark/133-flat.svg" class="image_xs"></a>
-        <a href="fantasy.html" float="left" >Fantasy</a>
-        <a href="stats.html" float="left">Stats</a>
+        <a href="/" float="left"><img src="https://www-league.nhlstatic.com/images/logos/league-dark/133-flat.svg" class="image_xs"></a>
+        <a href="/fantasy" float="left" >Fantasy</a>
+        <a href="/stats" float="left">Stats</a>
     </div>
     
     <div class="main">
-        <h1>Stats</h1>
+        <h1>Fantasy</h1>
     </div>
     <!-- js script import -->
     <script src="/js/index.js"></script>
