--- a/src/main/resources/templates/fantasy.html
+++ b/src/main/resources/templates/fantasy.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Custom CSS End -->
 
 </head>
@@ -28,6 +29,6 @@
         <h1>Fantasy</h1>
     </div>
     <!-- js script import -->
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
