--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -243,11 +243,11 @@
         <div class="relative">
           <h1 class="title_translate">Fantasy</h1> 
           <div class="overlay"> 
-            <div>
+            <div class="list">
               <ul>
-                <br> <li>Search players by name</li> <br>
-                <li>View current category leaders</li> <br>
-                <li>Compare player stats</li> <br>
+                <li>Search players by name</li>
+                <li>View current category leaders</li>
+                <li>Compare player stats</li>
                 <li>View stats by year</li>
               </ul>
             </div> 
