--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,51 +26,11 @@
 <body>
   <div class="parent">
     <div class="row opacity">
-            <div class="column center_horizontal" style="background-color:#1f1f1f;">
-                <div class="grid_3x3">
+            <div id="left_column" class="column center_horizontal" style="background-color:#1f1f1f;">
+                <div id="player_rank_grid" class="grid_3x3">
                     <div  class="card">
                         <img id="card1" src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_fullw">
-                        <img src="../static/assets/logos/logo_edm.svg" class="image_upper_right"><br>
-                        <p>Score: </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_fullw">
-                        <img src="../static/assets/logos/logo_edm.svg" class="image_upper_right"><br>
-                        <p>Score: </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_fullw">
-                        <img src="../static/assets/logos/logo_edm.svg" class="image_upper_right"><br>
-                        <p>Score: </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_fullw">
-                        <img src="../static/assets/logos/logo_edm.svg" class="image_upper_right"><br>
-                        <p>Score: </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_fullw">
-                        <img src="../static/assets/logos/logo_edm.svg" class="image_upper_right"><br>
-                        <p>Score: </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_fullw">
-                        <img src="../static/assets/logos/logo_edm.svg" class="image_upper_right"><br>
-                        <p>Score: </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_fullw">
-                        <img src="../static/assets/logos/logo_edm.svg" class="image_upper_right"><br>
-                        <p>Score: </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_fullw">
-                        <img src="../static/assets/logos/logo_edm.svg" class="image_upper_right"><br>
-                        <p>Score: </p>
-                    </div>
-                    <div class="card">
-                        <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_fullw">
-                        <img src="../static/assets/logos/logo_edm.svg" class="image_upper_right"><br>
+                        <img src="../assets/logos/logo_edm.svg" class="image_upper_right"><br>
                         <p>Score: </p>
                     </div>
                 </div>
@@ -237,7 +197,7 @@
               </div>
           </div>
     </div>
-    <div class="logo"> <img src="../static/assets/logos/logo_edm.svg" class="image_l">  </div>
+    <div class="logo"> <img src="../assets/logos/logo_edm.svg" class="image_l">  </div>
     
     <a href="/fantasy">
       <button class="fantasy_button button">
@@ -280,6 +240,6 @@
     
     <!-- js script import -->
     <script type="text/javascript" th:src="@{/js/index.js}"></script>
-    
+
 </body>
 </html>
