--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,163 +37,7 @@
             </div>
     
             <div class="column center_horizontal" style="background-color:#000000;">
-              <div class="grid_2x2">
-                    <div class="stat_panel">
-                        <h4>Points</h4>
-                        <hr color="white">
-                        <table style="width:100%">
-                            <tr>
-                              <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                              <td>105</td>
-                            </tr>
-                            <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                              <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                              <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                              <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                          </table>
-                    </div>
-                    <div class="stat_panel">
-                        <h4>Goals</h4>
-                        <hr color="white">
-                        <table style="width:100%">
-                            <tr>
-                              <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                              <td>105</td>
-                            </tr>
-                            <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                              <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                              <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                              <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                          </table>
-                    </div>
-                    <div class="stat_panel">
-                        <h4>Assists</h4>
-                        <hr color="white">
-                        <table style="width:100%">
-                            <tr>
-                              <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                              <td>105</td>
-                            </tr>
-                            <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                              <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                              <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                              <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                          </table>
-                    </div>
-                    <div class="stat_panel">
-                        <h4>Time on Ice</h4>
-                        <hr color="white">
-                        <table style="width:100%">
-                            <tr>
-                              <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                              <td>105</td>
-                            </tr>
-                            <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                              <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                              <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                              <tr>
-                                <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                                <td>105</td>
-                              </tr>
-                          </table>
-                    </div>
-                    <div class="stat_panel">
-                      <h4>Time on Ice</h4>
-                      <hr color="white">
-                      <table style="width:100%">
-                          <tr>
-                            <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                            <td>105</td>
-                          </tr>
-                          <tr>
-                              <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                              <td>105</td>
-                            </tr>
-                            <tr>
-                              <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                              <td>105</td>
-                            </tr>
-                            <tr>
-                              <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                              <td>105</td>
-                            </tr>
-                            <tr>
-                              <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                              <td>105</td>
-                            </tr>
-                        </table>
-                  </div>
-                  <div class="stat_panel">
-                    <h4>Time on Ice</h4>
-                    <hr color="white">
-                    <table style="width:100%">
-                        <tr>
-                          <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                          <td>105</td>
-                        </tr>
-                        <tr>
-                            <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                            <td>105</td>
-                          </tr>
-                          <tr>
-                            <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                            <td>105</td>
-                          </tr>
-                          <tr>
-                            <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                            <td>105</td>
-                          </tr>
-                          <tr>
-                            <td> <img src="https://cms.nhl.bamgrid.com/images/headshots/current/168x168/8478402@2x.jpg" class="image_table"> Connor McDavid</td>
-                            <td>105</td>
-                          </tr>
-                      </table>
-                </div>
+              <div id="right_column" class="grid_2x2">
               </div>
           </div>
     </div>
