added player table to stats page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
     <!-- Custom CSS -->
 
     <!-- for server -->
-    <link th:href="@{/css/style.css}" rel="stylesheet" />
+    <link th:href="@{/css/index.css}" rel="stylesheet" />
     
 
     <!-- FOR TESTING ONLY -->
