--- a/src/main/resources/static/css/stats.css
+++ b/src/main/resources/static/css/stats.css
@@ -420,7 +420,14 @@ li{
 /* Just common table stuff. Really. */
 table {
   border-collapse: collapse;
-  width: 100%g;
+  width: 100%;
+}
+
+
+body:not(.nohover) tbody tr:hover th,
+body:not(.nohover) tbody tr:hover td,
+td:hover:after, th:hover:after {
+	background-color: #800020;
 }
 
 th,
@@ -430,10 +437,32 @@ td {
   text-align: center;
 }
 
+tr:nth-child(even) {background: #1f1f1f}
+tr:nth-child(odd) {background: black}
+
 th {
-  background: rgb(0, 0, 0);
+  background: black;
+}
+
+.sort_header:hover{
+  background: white;
+  color: black;
 }
 
 .pTable{
   height: 1050px;
 }
+
+select{
+  color: black;
+}
+
+button{
+  background-color: #800020;
+  color: white;
+  padding: 2;
+  border: none;
+  border-radius: 5px;
+}
+
+
