--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -165,7 +165,7 @@ html {
   .card {
     background-color: #000000;
     text-align: center;
-    max-height: 100%;
+    max-height:100%;
     max-width: 100%;
     border-radius: 15px;
     overflow: hidden;
@@ -179,7 +179,7 @@ html {
   .grid_3x3 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 5% 15%;
+    gap: 5px 5px;
   }
   
   .grid_2x2 {
