--- a/src/main/resources/templates/stats.html
+++ b/src/main/resources/templates/stats.html
@@ -12,7 +12,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- Custom CSS -->
     <link th:href="@{/css/stats.css}" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Custom CSS End -->
 
 </head>
@@ -42,6 +41,7 @@
         </select>
   
         <select name="playerPosition" id="playerPosition">
+          <option value="all">All</option>
           <option value="player">C</option>
           <option value="goalie">LW</option>
           <option value="goalie">RW</option>
@@ -49,29 +49,29 @@
         </select>
   
         <select name="playerStats" id="playerStats">
-          <option value="games">Games</option>
+          <option value="points">Points</option>
           <option value="goals">Goals</option>
           <option value="assists">Assists</option>
-          <option value="points">Points</option>
           <option value="plusMinus">+/-</option>
-          <option value="pim">PIM</option>
           <option value="shots">Shots</option>
           <option value="shotPct">Shooting %</option>
+          <option value="pim">PIM</option>
           <option value="timeOnIcePerGame">TOI/GP</option>
           <option value="faceOffPct">Faceoff Win %</option>
           <option value="blocked">Blocks</option>
           <option value="hits">Hits</option>
+          <option value="games">Games</option>
         </select>
 
         <select name="goalieStats" id="goalieStats">
           <option value="wins">Wins</option>
+          <option value="saves">Svs</option>
+          <option value="savePercentage">Sv%</option>
           <option value="evenStrengthSavePercentage">EV Sv%</option>
           <option value="losses">L</option>
           <option value="goalAgainstAverage">GAA</option>
           <option value="gamesStarted">GS</option>
           <option value="shutouts">SO</option>
-          <option value="saves">Svs</option>
-          <option value="savePercentage">Sv%</option>
           <option value="powerPlaySaves">PP Svs</option>
           <option value="powerPlayShots">PPS</option>
           <option value="powerPlaySavePercentage">PP Sv%</option>
@@ -81,8 +81,8 @@
         </select>
 
         <select name="order" id="order">
-          <option value="ascending">Low-High</option>
           <option value="descending">High-Low</option>
+          <option value="ascending">Low-High</option>
         </select>
 
         <select name="results" id="results">
@@ -92,30 +92,30 @@
           <option value="descending">400 Results</option>
         </select>
 
-        <button>Get Stats</button>
+        <button id="getStats">Get Stats</button>
       </div>
 
-      <div class="tableFixHead pTable">
-          <table id="playerTable" class="zui-table zui-table-highlight-column">
+      <div class="tableFixHead pTable"  id="playerTable">
+          <table>
             <thead>
               <tr>
-                <th style="min-width: 125px;" >Player</th>
+                <th style="min-width: 275px;" >Player</th>
                 <th style="min-width: 150px;" >Season</th>
-                <th style="min-width: 150px;" >Team</th>
-                <th style="min-width: 125px;" >Pos</th>
-                <th class="sort_header" style="min-width: 125px;" id="gp">GP</th>
-                <th class="sort_header" style="min-width: 125px;" id="g">G</th>
-                <th class="sort_header" style="min-width: 125px;" id="a">A</th>
-                <th class="sort_header" style="min-width: 125px;" id="p">P</th>
-                <th class="sort_header" style="min-width: 125px;" id="pm">+/-</th>
-                <th class="sort_header" style="min-width: 125px;" id="pim">PIM</th>
-                <th class="sort_header" style="min-width: 125px;" id="pgp">P/GP</th>
-                <th class="sort_header" style="min-width: 125px;" id="s">S</th>
-                <th class="sort_header" style="min-width: 125px;" id="sp">S%</th>
-                <th class="sort_header" style="min-width: 125px;" id="toi">TOI/GP</th>
-                <th class="sort_header" style="min-width: 125px;" id="fow">FOW%</th>
-                <th class="sort_header" style="min-width: 125px;" id="h">H</th>
-                <th class="sort_header" style="min-width: 125px;" id="b">B</th>
+                <th style="min-width: 125px;" >Team</th>
+                <th style="min-width: 75px;" >Pos</th>
+                <th class="sort_header" style="min-width: 75px;" id="gp">GP</th>
+                <th class="sort_header" style="min-width: 75px;" id="g">G</th>
+                <th class="sort_header" style="min-width: 75px;" id="a">A</th>
+                <th class="sort_header" style="min-width: 75px;" id="p">P</th>
+                <th class="sort_header" style="min-width: 75px;" id="pm">+/-</th>
+                <th class="sort_header" style="min-width: 75px;" id="pim">PIM</th>
+                <th class="sort_header" style="min-width: 75px;" id="pgp">P/GP</th>
+                <th class="sort_header" style="min-width: 75px;" id="s">S</th>
+                <th class="sort_header" style="min-width: 75px;" id="sp">S%</th>
+                <th class="sort_header" style="min-width: 75px;" id="toi">TOI/GP</th>
+                <th class="sort_header" style="min-width: 75px;" id="fow">FOW%</th>
+                <th class="sort_header" style="min-width: 75px;" id="h">H</th>
+                <th class="sort_header" style="min-width: 75px;" id="b">B</th>
               </tr>
             </thead>
             <tbody id="playerTableBody">
@@ -123,24 +123,24 @@
           </table>
       </div>
 
-      <div class="tableFixHead pTable">
-        <table id="goalieTable">
+      <div class="tableFixHead pTable" id="goalieTable">
+        <table>
           <thead>
             <tr>
-              <th style="min-width: 125px;" >Player</th>
+              <th style="min-width: 275px;" >Player</th>
               <th style="min-width: 150px;" >Season</th>
               <th style="min-width: 150px;" >Team</th>
-              <th class="sort_header" style="min-width: 125px;" >GP</th>
-              <th class="sort_header" style="min-width: 125px;" >GS</th>
-              <th class="sort_header" style="min-width: 125px;" >W</th>
-              <th class="sort_header" style="min-width: 125px;" >L</th>
-              <th class="sort_header" style="min-width: 125px;" >SA</th>
-              <th class="sort_header" style="min-width: 125px;" >GA</th>
-              <th class="sort_header" style="min-width: 125px;" >Sv%</th>
-              <th class="sort_header" style="min-width: 125px;" >GAA</th>
-              <th class="sort_header" style="min-width: 125px;" >SO</th>
-              <th class="sort_header" style="min-width: 125px;" >EVSv%</th>
-              <th class="sort_header" style="min-width: 125px;" >SHSv%</th>
+              <th class="sort_header" style="min-width: 75px;" >GP</th>
+              <th class="sort_header" style="min-width: 75px;" >GS</th>
+              <th class="sort_header" style="min-width: 75px;" >W</th>
+              <th class="sort_header" style="min-width: 75px;" >L</th>
+              <th class="sort_header" style="min-width: 75px;" >SA</th>
+              <th class="sort_header" style="min-width: 75px;" >GA</th>
+              <th class="sort_header" style="min-width: 75px;" >Sv%</th>
+              <th class="sort_header" style="min-width: 75px;" >GAA</th>
+              <th class="sort_header" style="min-width: 75px;" >SO</th>
+              <th class="sort_header" style="min-width: 75px;" >EVSv%</th>
+              <th class="sort_header" style="min-width: 75px;" >SHSv%</th>
             </tr>
           </thead>
           <tbody id="goalieTableBody">
